# nadeko

./: README.md  conanfile.py  lines.c  main.c  meson.build  nadeko.c  shell.nix  snake.c
.github/workflows/: build.yml  conan.yml  linux.yml  macos.yml  test.yml  windows.yml
